gcc/testsuite/rust/rustc/ui/error-codes/E0118.rs
impl (u8, u8) { // { dg-error ".E0118." "" { target *-*-* } }
    fn get_state(&self) -> String {
        String::new()
    }
}

fn main() {
}

